# DB_proprietarios

./: 404.html  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
1_inicio/: index.html
2_index/: index.html
estrutura/: index.html
search/: search_index.json
src/: main.py  mkdocs.yml
src/API/: classes_model.py  data_model.py  extract.py  model.py  raw_data.py
src/Database/: database.py  models.py
src/Fetch/: commit.py
src/docs/: 1_inicio.md  2_index.md
